--- a/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_guild_list.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_guild_list.xml
@@ -21,5 +21,13 @@
             android:textAlignment="center"
             android:textColor="@android:color/background_light"
             android:textSize="55sp" />
+
+        <LinearLayout
+            android:id="@+id/guildList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"></LinearLayout>
+
     </LinearLayout>
+
 </android.widget.RelativeLayout>
