--- a/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_administrator_del_acc.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_administrator_del_acc.xml
@@ -7,9 +7,17 @@
     tools:context="hr.fer.amigosi.guildbuild.AdministratorDelAccActivity"
     android:background="@color/colorPrimaryDark">>
 
-    <LinearLayout
-        android:id="@+id/linLayout1"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"></LinearLayout>
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:id="@+id/linLayout1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"></LinearLayout>
+
+    </ScrollView>
+
+
 </android.widget.RelativeLayout>
