--- a/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_administrator_view_user_req.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_administrator_view_user_req.xml
@@ -8,9 +8,16 @@
     android:background="@color/colorPrimaryDark"
     tools:context="hr.fer.amigosi.guildbuild.AdministratorViewUserReqActivity">
 
-    <LinearLayout
-        android:id="@+id/linLayout"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"></LinearLayout>
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:id="@+id/linLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"></LinearLayout>
+
+    </ScrollView>
+
 </android.widget.RelativeLayout>
