--- a/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_messages.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_messages.xml
@@ -7,26 +7,40 @@
     tools:context="hr.fer.amigosi.guildbuild.MessagesActivity"
     android:background="@color/colorPrimaryDark">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
 
-        <TextView
-            android:id="@+id/MessagesText"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="cursive"
-            android:text="Inbox"
-            android:textAlignment="center"
-            android:textColor="@android:color/background_light"
-            android:textSize="55sp" />
+            android:orientation="vertical">
 
-        <Button
-            android:id="@+id/button"
-            style="@style/button_style"
-            android:lineSpacingExtra="12sp"
-            android:text="@string/send_message" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/MessagesText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="cursive"
+                android:text="Inbox"
+                android:textAlignment="center"
+                android:textColor="@android:color/background_light"
+                android:textSize="55sp" />
+
+            <Button
+                android:id="@+id/btnSendMessage"
+                style="@style/button_style"
+                android:layout_width="match_parent"
+                android:lineSpacingExtra="12sp"
+                android:text="@string/send_message" />
+
+            <LinearLayout
+                android:id="@+id/linLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"></LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
 </android.widget.RelativeLayout>
