--- a/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_edit_profile.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_edit_profile.xml
@@ -17,8 +17,9 @@
             android:id="@+id/EditProfileText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
             android:fontFamily="cursive"
-            android:text="Edit profile"
+            android:text="@string/edit_profile"
             android:textAlignment="center"
             android:textSize="55sp"
             android:textStyle="bold" />
@@ -34,7 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Change avatar"
+                android:text="@string/change_avatar"
                 android:textAppearance="@style/TextAppearance.AppCompat.Button" />
         </LinearLayout>
 
@@ -57,7 +58,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textAlignment="center"
-                android:text="Add new character"
+                android:text="@string/add_new_character"
                 android:textAppearance="@style/TextAppearance.AppCompat.Button" />
 
             <Button
