--- a/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_guild_create.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_guild_create.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="hr.fer.amigosi.guildbuild.RegisterActivity"
-    android:background="@color/colorPrimaryDark">>
+    android:background="@color/colorPrimaryDark">
 
     <LinearLayout
         android:layout_width="match_parent"
