--- a/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_add_new_character.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_add_new_character.xml
@@ -41,6 +41,32 @@
             android:textColor="@color/colorPrimaryDark"
             android:textColorHint="@color/hintColor" />
 
+        <EditText
+            android:id="@+id/characterCraftSkills"
+            style="@style/editText_style"
+            android:hint="Character crafting skills"
+            android:inputType="textPersonName"
+            android:textColor="@color/colorPrimaryDark"
+            android:textColorHint="@color/hintColor" />
+        <TextView
+            android:id="@+id/gameTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-condensed"
+            android:text="Game:"
+            android:textAlignment="viewStart"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
+            android:textColor="@android:color/background_light"
+            android:textSize="20sp" />
+
+        <Spinner
+            android:id="@+id/charGameSpinner"
+            android:layout_width="match_parent"
+            android:layout_height="39dp"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown"></Spinner>
+
+
         <TextView
             android:id="@+id/gameClassTextView"
             android:layout_width="match_parent"
@@ -58,6 +84,7 @@
             android:layout_height="39dp"
             android:background="@android:drawable/btn_dropdown"
             android:spinnerMode="dropdown"></Spinner>
+
 
         <LinearLayout
             android:layout_width="match_parent"
