--- a/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_messages.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_messages.xml
@@ -19,14 +19,14 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/MessagesText"
+                android:id="@+id/textView7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="cursive"
                 android:text="Inbox"
                 android:textAlignment="center"
                 android:textColor="@android:color/background_light"
-                android:textSize="55sp" />
+                android:textSize="44sp" />
 
             <Button
                 android:id="@+id/btnSendMessage"
@@ -36,10 +36,11 @@
                 android:text="@string/send_message" />
 
             <LinearLayout
-                android:id="@+id/linLayout"
+                android:id="@+id/linMsgLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="431dp"
                 android:orientation="vertical"></LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 
