--- a/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_send_message.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_send_message.xml
@@ -75,7 +75,7 @@
             android:inputType="textPersonName" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btnSendMsg2"
             style="@style/button_style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
