Ispravci na ConcedeActivity. Dodani buttoni na GuildDetails view.

--- a/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_guild_members.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_guild_members.xml
@@ -12,6 +12,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+
         <TextView
             android:id="@+id/GuildNameText2"
             android:layout_width="match_parent"
@@ -19,17 +20,36 @@
             android:fontFamily="cursive"
             android:textAlignment="center"
             android:textColor="@android:color/background_light"
-            android:textSize="55sp" />
+            android:textSize="50sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/giveUpLeadershipButton"
+                style="@style/button_style"
+                android:layout_height="match_parent"
+                android:text="@string/give_up_leadership" />
+
+            <Button
+                android:id="@+id/promote_demoteMembersButton"
+                style="@style/button_style"
+                android:layout_height="match_parent"
+                android:text="@string/promote_demote_members" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/GuildMembers"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="cursive"
+            android:text="@string/members"
             android:textAlignment="center"
-            android:text="Members"
             android:textColor="@android:color/background_light"
             android:textSize="30sp" />
-
 
         <ScrollView
             android:layout_width="match_parent"
@@ -38,11 +58,10 @@
             <LinearLayout
                 android:id="@+id/guildMembers1"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"></LinearLayout>
 
         </ScrollView>
-
 
 
     </LinearLayout>
