--- a/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_guild_details.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_guild_details.xml
@@ -16,20 +16,20 @@
             android:id="@+id/GuildNameText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/white"
             android:fontFamily="cursive"
             android:textAlignment="center"
-            android:textSize="55sp"
+            android:textColor="@android:color/white"
+            android:textSize="60sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/GuildOpis"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/white"
             android:fontFamily="cursive"
             android:textAlignment="center"
-            android:textSize="55sp"
+            android:textColor="@android:color/white"
+            android:textSize="24sp"
             android:textStyle="bold" />
 
         <LinearLayout
@@ -65,6 +65,19 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/JoinRequestsButton"
+                style="@style/button_style"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/user_requests" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <Button
@@ -90,6 +103,7 @@
                 android:layout_weight="1"
                 android:text="@string/leave_guild"
                 android:textAppearance="@style/TextAppearance.AppCompat.Button" />
+
         </LinearLayout>
 
 
