--- a/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_user_requests_for_guild.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_user_requests_for_guild.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="hr.fer.amigosi.guildbuild.UserRequestsForGuild">
+    tools:context="hr.fer.amigosi.guildbuild.UserRequestsForGuild"
+    android:background="@color/colorPrimaryDark">
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+            android:id="@+id/ObrasciLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+</ScrollView>
