--- a/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_add_new_character.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_add_new_character.xml
@@ -37,7 +37,7 @@
             android:id="@+id/characterLevel"
             style="@style/editText_style"
             android:hint="Character level"
-            android:inputType="textPersonName"
+            android:inputType="number"
             android:textColor="@color/colorPrimaryDark"
             android:textColorHint="@color/hintColor" />
 
