Testing promote_demote activity. Found and fixing a bug in GuildDetails when coming from GuildList.

--- a/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_coordinator_owner_functions.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_coordinator_owner_functions.xml
@@ -23,9 +23,21 @@
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Display3"
             android:textColor="@android:color/background_light"
-            android:textSize="30sp"
+            android:textSize="36sp"
             android:textStyle="bold" />
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:id="@+id/usersToChangeRankLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
+        </ScrollView>
 
 
     </LinearLayout>
+
 </android.widget.RelativeLayout>
