--- a/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_user_profile.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_user_profile.xml
@@ -137,6 +137,17 @@
                 android:text="My characters"
                 android:textAppearance="@style/TextAppearance.AppCompat.Button" />
 
+            <Button
+                android:id="@+id/myEventsButton"
+                style="@style/button_style"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="EditProfile"
+                android:text="My events"
+                android:textAppearance="@style/TextAppearance.AppCompat.Button" />
+
+
         </LinearLayout>
     </LinearLayout>
 
